# MyNotes

./: Makefile  README.md  docker-compose.yaml
backend/: .env_example  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 2024_09_17_1448-76182801d577_.py
backend/src/: config.py  exceptions.py  main.py
backend/src/api/v1/: auth.py  note.py  tag.py
backend/src/core/: dependencies.py
backend/src/core/database/models/: note.py  tag.py  token_blacklist.py  user.py
backend/src/core/repositories/: note_repository.py  tag_repository.py  token_repository.py  user_repository.py
backend/src/core/schemas/: note.py  tag.py  user_schemas.py
backend/src/logger/: debug_mode.json  production_mode.json
backend/src/services/: auth_service.py  note.py  tag_service.py  token_service.py  user_service.py
backend/src/utils/: auth.py
telegram_bot/: .env_example  Dockerfile  pyproject.toml  requirements.txt
telegram_bot/src/: DTO.py  config.py  main.py  manager.py
telegram_bot/src/FSM/: FSM.py
telegram_bot/src/callback_data/: callback_data_notes.py
telegram_bot/src/database/: database.py
telegram_bot/src/handlers/: callbacks.py  commands.py  notes.py  register.py
telegram_bot/src/keyboards/: inline.py  reply.py
telegram_bot/src/logger/: debug_mode.json  production_mode.json
telegram_bot/src/utilits/: callbackData.py
