[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Crusazer <crusazer@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
pydantic-settings = "^2.5.2"
aiosqlite = "^0.20.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
